# seoulana-skaa

./: .gitignore  README.md  index.html
custom-wallet-server/: .env  README.md  package-lock.json  package.json  server.js
game-with-sig/: README.md  index.html
mock-frontend/: README.md  index.html
mock-frontend/css/: styles.css
mock-frontend/js/: auth.js
server/: README.md  jest.config.js  package-lock.json  package.json  solana_sessions.db  tsconfig.json
server/src/: app.ts  server.ts  types.d.ts
server/src/config/: auth.ts  index.ts
server/src/controllers/: authController.ts  sessionController.ts
server/src/docs/: swagger.ts
server/src/idl/: idl.json
server/src/middlewares/: auth.ts
server/src/models/: sessionModel.ts  (+1 more)
solana-programs/: Anchor.toml  Cargo.toml  README copy.md  README.md  buffer-keypair.json  deploy-keypair.json  package-lock.json  package.json  tsconfig.json
solana-programs/programs/aa_relay/: Cargo.toml
solana-programs/programs/aa_relay/src/: lib.rs  user_account.rs
solana-programs/programs/user_account/: Cargo.toml
solana-programs/programs/user_account/src/: lib.rs  lib.rs.bak
solana-programs/programs/uxaa/: Cargo.toml
solana-programs/programs/uxaa/src/: lib.rs
solana-programs/scripts/: deploy.sh
solana-programs/tests/: seoulana.ts
uxaa-example/: aa_relay.json  index.html
uxaa-sdk/: README.md  keypair.json  package-lock.json  package.json  tsconfig.json
uxaa-sdk/examples/: basic-usage.ts
uxaa-sdk/idl/: aa_relay.json
uxaa-sdk/sdk/: SessionKeyManager.ts  index.ts
uxaa-sdk/tests/: sdk.test.ts
(+10 files in other folders)
