[package]
name = "aa_relay"
version = "0.1.0"
description = "UXAA - User eXperience Account Abstraction for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aa_relay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-program = "1.14.13"
