[package]
name = "user_account"
version = "0.1.0"
description = "UXAA - User Account Management for Account Abstraction"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "user_account"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "~1.16.25"