[package]
name = "uxaa"
version = "0.1.0"
description = "UXAA - User eXperience Account Abstraction for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "uxaa"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
